--- a/style.css
+++ b/style.css
@@ -1,19 +1,79 @@
-.heading p{
-    background-color: blanchedalmond;
-    /*content and element*/
-    padding: 0cqb;
-    /*gap between two element*/
-    margin: 16px; 
-    margin: 10px;/*for all side*/
-    margin: 16px 20px;/*topbottom leftright*/
-    margin: 10px 20px 16px ;/*top rightleft bottom*/
-    margin: 10px 20px 16px 18px; /*clockwise top right bottom left*/
-    /*physical pixel,box model,selectors,margin*/
-}
+/* .parent{
+    display: grid;
+    /* grid-template-columns: 50px 50px 50px; */
 
-div{
-    text-align: center;
+    /* grid-template-columns: repeat(4,50px); */
+    /* grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 75px 50px;
+    background-color: blue;
+    row-gap: 10px;
+    column-gap: 10px;
+    grid-auto-rows: 50px; 
+    border: 10px solid blue;
+
 }
-img{
-    position: absolute;
+.child{
+     background-color: aquamarine;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+} 
+
+.header{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    background-color: aquamarine;
 }
+.menu{
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+.footer{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    background-color: aquamarine;
+} */ */
+
+.parent{
+    display: grid;
+    /*grid-template-columns: 50px 50px 50px; */
+    /* grid-template-columns: repeat(4,50px); */
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 75px 50px;
+    background-color: blue; */
+    row-gap: 10px;
+    column-gap: 10px;
+    grid-auto-rows: 50px;  */
+    border: 10px solid blue;
+}
+.child{
+    /* background-color: aquamarine;
+   justify-content: center;
+   align-items: center;
+   display: flex;  */
+} 
+
+.green{
+   grid-column-start: 1;
+   grid-column-end: 4;
+   background-color: green;
+   row-gap: 100px;
+   
+}
+.yellow{
+   grid-row-start: 1;
+   grid-row-end: 2;
+   background-color: yellow;
+}
+.red{
+   grid-column-start: 2;
+   grid-column-end: 4;
+   background-color: red;
+}
+.blue{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    background-color: blue;
+    row-gap: 100px;
+    
+ }
